Descarga de datos desde URL

--- a/Prueba_Tecnica_AlbertoFontanSantamaria.ipynb
+++ b/Prueba_Tecnica_AlbertoFontanSantamaria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5c4720b8",
+   "id": "33cb2fc0",
    "metadata": {},
    "source": [
     "# Prueba Técnica Redegal\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 290,
-   "id": "2c411d29",
+   "id": "c9093db5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
-   "id": "97955588",
+   "execution_count": 314,
+   "id": "81dd3c94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +32,13 @@
     "    year = str(year)\n",
     "    #Si es un mes por debajo de 10 añadir el 0 a la izquierda al texto\n",
     "    month = \"{:02d}\".format(month)\n",
-    "    return pd.read_csv('yellow_tripdata_'+year+'-'+month+'.csv')"
+    "    return pd.read_csv('https://s3.amazonaws.com/nyc-tlc/trip+data/yellow_tripdata_'+year+'-'+month+'.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
-   "id": "043c7fb4",
+   "execution_count": 315,
+   "id": "94bc753b",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "id": "524f2e22",
+   "id": "27cca392",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 294,
-   "id": "4ffecc7c",
+   "id": "1dedea44",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1efa5ebe",
+   "id": "c8d896f9",
    "metadata": {},
    "source": [
     "Al leer el fichero nos da un warning que indica que la columna 6 tiene varios tipos de datos mezclados, por lo que si se revisan los datos, vemos que el problema está en la columna \"store_and_fwd_flag\". Como no sé de que se trata dicha columna, buscamos si hay algún tipo de metainformación en la página en la que obtenemos los datos:\n",
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6a1ab0f",
+   "id": "eaf08172",
    "metadata": {},
    "source": [
     "Por tanto, en primer lugar, **debemos atender a la columna \"trip_distance\"** que es la distancia transcurrida en el trayecto en millas, y a partir de la cual debemos extraer los trayectos que superan dicho percentil 95."
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "id": "5e046d93",
+   "id": "a0795896",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99426300",
+   "id": "36262120",
    "metadata": {},
    "source": [
     "Hacemos una pequeña visualización de los valores de los datos y como están distribuidos"
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 296,
-   "id": "035613e5",
+   "id": "4d61e4d6",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a69516dc",
+   "id": "88594e1d",
    "metadata": {},
    "source": [
     "En este caso y para este mes concreto se puede ver en una primera visualización general que la mayoría de los trayectos están en **entre a la milla y las 3.45 millas, como nos indican los cuartiles y la mediana**, y que hay valores más atípicos en lo que a la distancia respecta con trayectos muy superiores a estos y también trayectos de 0 millas lo cual no tiene mucho sentido y podrían estar almacenados inúltimente o por alguna otra causa.\n",
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "6c85537e",
+   "id": "2bb35fcc",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac379217",
+   "id": "d040b242",
    "metadata": {},
    "source": [
     "No obstante, es **inapreciable la caja con los cuartiles y la mediana debido a la existencia de valores extremadamente altos** que incrementan la escala del gráfico, por lo que limitaré el eje Y entre el rango de los cuartiles más la media y se dejarán de ver estos datos exageradamente grandes."
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "1be18723",
+   "id": "cd82666b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 299,
-   "id": "54cd6755",
+   "id": "d518c1f8",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 300,
-   "id": "130903c8",
+   "id": "7bf397be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0d23310",
+   "id": "6e76b671",
    "metadata": {},
    "source": [
     "## Superan percentil indicado"
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 301,
-   "id": "1702184e",
+   "id": "40ab9af9",
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "701f978a",
+   "id": "84b1c943",
    "metadata": {},
    "source": [
     "## Agrupación por trayecto"
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 302,
-   "id": "c7495f00",
+   "id": "433cd4ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": 303,
-   "id": "59707b80",
+   "id": "11e1d905",
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4667bc16",
+   "id": "c8e58121",
    "metadata": {},
    "source": [
     "## Se seleccionan los 10 primeros trayectos"
@@ -1129,7 +1129,7 @@
   {
    "cell_type": "code",
    "execution_count": 304,
-   "id": "7e449ef0",
+   "id": "9b1f4680",
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1041789",
+   "id": "2b3b755c",
    "metadata": {},
    "source": [
     "## Se sustituyen los IDs por los nombres de las Zonas para imprimir la salida deseada"
@@ -1258,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 305,
-   "id": "96b6edd2",
+   "id": "c9e54958",
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": 306,
-   "id": "388d1dd3",
+   "id": "f98af233",
    "metadata": {},
    "outputs": [
     {
